styles/reset.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;

  border: none;
}

html {
  color-scheme: light;
  scrollbar-gutter: stable;
  scroll-behavior: smooth;
}

html,
body {
  width: 100%;
  height: 100%;
}

body {
  overflow-x: hidden;

  background-color: hsl(var(--background));
  color: hsl(var(--text));

  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeSpeed;
}

a,
a:link,
a:visited,
a:hover {
  text-decoration: none;
}

a {
  color: inherit;
}

aside,
nav,
footer,
header,
section,
main {
  display: block;
}

img {
  vertical-align: top;
}

img,
svg {
  height: auto;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
  color: inherit;
  background-color: transparent;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  font: inherit;
  overflow-wrap: break-word;
}

button,
input[type='submit'] {
  display: inline-block;
  box-shadow: none;
  background-color: transparent;
  background: none;
  cursor: pointer;
}

input::-ms-clear,
input::-ms-reveal {
  width: 0;
  height: 0;
  display: none;
}

input::-webkit-search-decoration,
input::-webkit-search-cancel-button,
input::-webkit-search-results-button,
input::-webkit-search-results-decoration {
  display: none;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type='number'] {
  -moz-appearance: textfield;
}

button::-moz-focus-inner {
  padding: 0;
  border: 0;
}

label {
  cursor: pointer;
}

legend {
  display: block;
}

address {
  font-style: normal;
}

#root,
#__next {
  isolation: isolate;
}

@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

